2009-04-17 Magnus Hagdorn
 * Makefile.am: add new recursive targets
 * bootstrap: make sure GLIMMER_PREFIX environment variable is set
 * configure.in: add option to use SGE to start model runs
 * make.rules: new targets; handle SGE options
 * EISMINT-1/Makefile.am: do not run models and visualisation when
   make all is run
 * EISMINT-2/Makefile.am: ditto
 * PyCF/Makefile.am: ditto
 * benchmarks/Makefile.am: ditto
 * isos/Makefile.am: ditto
 * lin-non_lin/Makefile.am: ditto

2009-03-10 Magnus Hagdorn
 * EISMINT-3-GL/EISMINT3GL.input.nc: fixed false easting/northing,
   see: http://forge.nesc.ac.uk/pipermail/glimmer-discuss/2009-February/000319.html

2007-07-10 Ian Rutt
 * Removed redundant options from EISMINT-1 config files

2006-10-25 Ian Rutt
 * Updated EISMINT-3-GL data to reflect changes in driver

2006-10-16 Ian Rutt
 * Minor tweaking of EISMINT-3-GL. 

2006-10-10 Ian Rutt
 * Further improvements to EISMINT-3-GL

2006-06-09 Ian Rutt
 * Corrected EISMINT-3 Greenland input file - precipitation now
   water-equivalent

2006-04-27 Ian Rutt
 * Added files for EISMINT-3 Greenland steady-state scenario

2005-12-19 Magnus Hagdorn
 * configure.in: bump version
 * NEWS: update

2005-12-13 Magnus Hagdorn
 * configure.in: use AM_PATH_GLIMMER to set up GLIMMER
 * bootstrap: look for glimmer.m4
 * Makefile.am: add rule to regenerate aclocal.m4

2005-10-06 Magnus Hagdorn
 * configure.in: bump version
 * Makefile.am: fix minor bug
 * NEWS: update NEWS

2005-10-04 Magnus Hagdorn
 * PyCF/Makefile.am: more plots
 * new forcing for European runs
 * fenscan-gthf.config: new run with GTHF calcs enabled
 * Makefile.am hook up new files
 * configure.in: require glimmer-0.5.3

2005-07-07 Magnus Hagdorn
 * PyCF/Makefile.am: add more RSL plotting tests

2005-04-18 Magnus Hagdorn
 * configure.in: bump version to 0.4, make rsl plot dependent on
   presence of rsl database
 * PyCF/Makefile.am: make rsl plot dependent on presence of rsl
   database, fix options of plotSpot.py