@@ -1,12 +1,13 @@
 if BUILD_GRAPHICS
   graphics = 
 endif
-BUILT_SOURCES = fenscan.nc fenscan-gthf.nc $(graphics)
+data = fenscan.nc fenscan-gthf.nc
+BUILT_SOURCES = 
 
 EXTRA_DIST = fenscan.config fenscan-gthf.config europe.20km.nc mb2.data temp-exp.model specmap.data
 
 MOSTLYCLEANFILES = $(graphics)
-CLEANFILES = $(BUILT_SOURCES)
+CLEANFILES = $(data) $(graphics) $(BUILT_SOURCES)
 
 include $(top_srcdir)/make.rules
 
